--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -1,13 +1,34 @@
 {% extends "base.html" %}
 
 {% block content %}
-Hello World from {{name}}!
-<table>
-  {% for skill in skills %}
-  <tr>
-    <!-- <td><a href="skills/skill/{{skill.id}}">{{skill.name}}</a></td> -->
-    <td><a href="skills/{{skill.id}}">{{skill.name}}</a></td>
-  </tr>
-  {% endfor %}
-</table>
+<div id="front-page-greeter">
+  <h1>Change the world</h1>
+  <h2>Bit by Training Bit</h2>
+  <h3>The Global Change Lab</h3>
+  <h3>is a training hub for</h3>
+  <h3>global activists</h3>
+  <a href="/join" class="button join">Join us <span class="icon add-user"></span></a>
+</div>
+<div class="row" id="front-page-cols">
+  <div class="medium-6 large-4 columns">
+    <h3>Get activist skills</h3>
+    <div class="icon large trophy"></div>
+    <p>Skills are sets of training bits you need to change the world</p>
+    <a href="{% url 'skills_overview' %}" class="button join">See all skills</a>
+  </div>
+  <div class="medium-6 large-4 columns">
+    <h3>Do training bits</h3>
+    <div class="icon large tools"></div>
+    <p>Training bits are small pieces of inspiration, tools or background in activism and social change</p>
+    <a href="{% url 'trainingbits_overview' %}" class="button join">See all bits</a>
+  </div>
+  <div class="medium-6 large-4 columns">
+    <h3>Share with others</h3>
+    <div class="icon large chat"></div>
+    <p>Share what you do and learn from other activists</p>
+    <a href="{% url 'shares' %}" class="button join">See all shares</a>
+  </div>
+</div>
+
+
 {% endblock %}
