--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -50,6 +50,30 @@
   </div>
   <footer>
     {% block footer %}
+    <div class="row" id="footer-links">
+      <div class="large-4 columns">
+        <h6>About Global Change Lab</h6>
+        <a href="#">Terms of service</a>
+        <a href="#">about us</a>
+        <a href="#">read our blog</a>
+        <a href="#">Help and support</a>
+        <a href="#">Contact</a>
+      </div>
+      <div class="large-4 columns">
+        <h6>Training extras</h6>
+        <a href="#">Search for a training</a>
+        <a href="#">All training</a>
+        <a href="#">How to apply</a>
+      </div>
+      <div class="large-4 columns">
+        <h6>Who we are</h6>
+        <a href="#">Training principals</a>
+        <a href="#">Who we work with</a>
+        <a href="#">GP</a>
+        <a href="#">News</a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
     {% endblock %}
   </footer>
 </body>
