Change greeter on frontpage from <h3> to <p>

--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -4,9 +4,9 @@
 <div id="front-page-greeter">
   <h1>Change the world</h1>
   <h2>Bit by Training Bit</h2>
-  <h3>The Global Change Lab</h3>
-  <h3>is a training hub for</h3>
-  <h3>global activists</h3>
+  <p>The Global Change Lab
+  is a training hub for
+  global activists</p>
   <a href="/join" class="button join">Join us <span class="icon add-user"></span></a>
 </div>
 <div class="row" id="front-page-cols">
