Add <meta charset="utf-8">

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta charset="utf-8">
   <link href="http://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{% static 'global_change_lab/css/app.css' %}" />
   <title>{% block title %}Global Change Lab{% endblock %}</title>
