--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -7,7 +7,7 @@
   <p>The Global Change Lab
   is a training hub for
   global activists</p>
-  <a href="/join" class="button join">Join us <span class="icon add-user"></span></a>
+  <a href="{% url 'account_signup' %}" class="button join">Join us <span class="icon add-user"></span></a>
 </div>
 <div class="row" id="front-page-cols">
   <div class="medium-6 large-4 columns">
