Add namespace to include `skills` URLs

--- a/global_change_lab/templates/front_page.html
+++ b/global_change_lab/templates/front_page.html
@@ -14,13 +14,13 @@
     <h3>Get activist skills</h3>
     <div class="icon large trophy"></div>
     <p>Skills are sets of training bits you need to change the world</p>
-    <a href="{% url 'skills_overview' %}" class="button join">See all skills</a>
+    <a href="{% url 'skills:skills_overview' %}" class="button join">See all skills</a>
   </div>
   <div class="medium-6 large-4 columns">
     <h3>Do training bits</h3>
     <div class="icon large tools"></div>
     <p>Training bits are small pieces of inspiration, tools or background in activism and social change</p>
-    <a href="{% url 'trainingbits_overview' %}" class="button join">See all bits</a>
+    <a href="{% url 'skills:trainingbits_overview' %}" class="button join">See all bits</a>
   </div>
   <div class="medium-6 large-4 columns">
     <h3>Share with others</h3>
