--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -11,10 +11,10 @@
   <title>{% block title %}Global Change Lab{% endblock %}</title>
 </head>
 
-<body>
+<body class="{% block body-classes %}{% endblock %}">
   {# Unfortunately we need this wrapper to position the footer at the bottom of the page #}
   <div id="sticky-footer-wrap">
-    <nav class="top-bar" data-topbar>
+    <header class="top-bar {% block header-classes %}{% endblock %}">
       <a href="/" title="Global Change Lab home"><img src="{% static 'images/gcl-logo.png' %}" id="gcl-logo" /></a>
 
       <div id="logged-in-menu">
@@ -68,8 +68,8 @@
         {# </ul> #}
 
       </section>
-    </nav>
-    <div id="content">
+    </header>
+    <div id="content" class="{% block content-classes %}{% endblock %}">
         {% block content %}{% endblock %}
     </div>
   </div>
@@ -81,7 +81,7 @@
   <!--   </ul> -->
   <!--   {% endblock %} -->
   <!-- </header> -->
-  <footer>
+  <footer class="{% block footer-classes %}{% endblock %}">
     {% block footer %}
     <div class="row" id="footer-links">
       <div class="large-4 columns">
