--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<div id="trainingbit-cover" style="background-image: url({{trainingbit.image.url}})">
-  <h1>{{ trainingbit.name }}</h1>
-</div>
-<p class="description">{{ trainingbit.description }}</p>
-{% if trainingbit.author == user %}
-<a href="{% url 'skills:trainingbit_delete' trainingbit.id %}" class="button">Delete training bit</a>
-{% endif %}
+  {% include 'skills/partials/trainingbit_cover.html' %}
+  {% if trainingbit.author == user %}
+    <a href="{% url 'skills:trainingbit_delete' trainingbit.id %}" class="button">Delete training bit</a>
+  {% endif %}
 
 {% endblock %}
