Fix missing word and an erroneous `type` attribute on <textarea>

--- a/skills/templates/skills/trainingbit_edit.html
+++ b/skills/templates/skills/trainingbit_edit.html
@@ -29,11 +29,11 @@
   </div>
   <div class="input-field-row">
     <div class="input-field">
-      <textarea type="text" name="description" placeholder="Describe your training bit">{{trainingbit.description}}</textarea>
+      <textarea name="description" placeholder="Describe your training bit">{{trainingbit.description}}</textarea>
     </div>
     <div class="help-text">
       <h6>Description</h6>
-      Here you should write a short description of your .
+      Here you should write a short description of your training bit.
     </div>
   </div>
   <div class="input-field-row">
