Fix sticky footer (missing push <div>)

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -72,6 +72,7 @@
     <div id="content" class="{% block content-classes %}{% endblock %}">
         {% block content %}{% endblock %}
     </div>
+    <div id="sticky-footer-push"></div>
   </div>
   <!-- <header> -->
   <!--   {% block header %} -->
