--- a/global_change_lab/templates/partials/trainer_item.html
+++ b/global_change_lab/templates/partials/trainer_item.html
@@ -1,5 +1,5 @@
 
-<div class="trainer-trainingbit">
+<div class="trainer-item">
     <h3><a href="{% url url_name item.id %}">{{item.name}}</a></h3>
     <ul class="icon-list">
       <li><span class="icon small users"></span>432</li>
