Add livereload when debugging

--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="utf-8">
   <link href="http://fonts.googleapis.com/css?family=Allerta+Stencil" rel="stylesheet" type="text/css">
+  {% if debug %}
+  <script src="//localhost:35729/livereload.js"></script>
+  {% endif %}
   <script src="/static/foundation/js/vendor/jquery.js"></script>
   <script src="/static/foundation/js/foundation.js"></script>
   <script src="/static/foundation/js/foundation/foundation.dropdown.js"></script>
