--- a/skills/templates/skills/partials/trainingbit_cover.html
+++ b/skills/templates/skills/partials/trainingbit_cover.html
@@ -1,4 +1,4 @@
-<div id="trainingbit-cover" style="background-image: url({{trainingbit.image.url}})">
+<div id="trainingbit-cover" style="background-image: url({{trainingbit.getImage}})">
   <h1>{{ trainingbit.name }}</h1>
 </div>
 <p class="description">{{ trainingbit.description }}</p>
