--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -28,8 +28,7 @@
           <span class="icon triangle-down red"></span>
         </a>
         <ul id="drop" class="f-dropdown" data-dropdown-content>
-          <li><a href="#">This is a link</a></li>
-          <li><a href="#">This is another</a></li>
+          <li><a href="{% url 'profile' %}">View my profile</a></li>
           <li><a href="{% url 'account_logout' %}">Sign out</a></li>
         </ul>
       {% else %}
