--- a/global_change_lab/templates/base.html
+++ b/global_change_lab/templates/base.html
@@ -7,9 +7,9 @@
   {% if debug %}
   <script src="//localhost:35729/livereload.js"></script>
   {% endif %}
-  <script src="/static/foundation/js/vendor/jquery.js"></script>
-  <script src="/static/foundation/js/foundation.js"></script>
-  <script src="/static/foundation/js/foundation/foundation.dropdown.js"></script>
+  <script src="{% static 'jquery.min.js' %}"></script>
+  <script src="{% static 'foundation/js/foundation.min.js' %}"></script>
+  <script src="{% static 'foundation/js/foundation/foundation.dropdown.js' %}"></script>
   <link rel="stylesheet" href="{% static 'global_change_lab/css/app.css' %}" />
   <title>{% block title %}Global Change Lab{% endblock %}</title>
 </head>
