--- a/scss/app.scss
+++ b/scss/app.scss
@@ -4,6 +4,7 @@
 @import "scss/entypo";
 @import "scss/front_page";
 @import "scss/base";
+@import "scss/messages";
 @import "scss/trainer_dashboard";
 @import "scss/trainingbit_edit";
 @import "scss/trainingbit_view";
