Fix some places where the wrong user is used
REMEMBER TO DISTINGUISH BETWEEN THE LOGGED IN USER AND THE WHOSE USER
PROFILE YOU ARE LOOKING AT (or deleting, upgrading to be a trainer...)

--- a/global_change_lab/templates/profile.html
+++ b/global_change_lab/templates/profile.html
@@ -4,13 +4,13 @@
 <div class="page-buttons">
 
   {# Upgrade user button (to trainer) #}
-  {% if user.profile.is_admin and not some_user.profile.is_trainer %}
-    <a href="{% url 'user_upgrade_to_trainer' user.id %}" class="button success">Upgrade to trainer</a>
+  {% if request.user.profile.is_admin and not some_user.profile.is_trainer %}
+    <a href="{% url 'user_upgrade_to_trainer' some_user.id %}" class="button success">Upgrade to trainer</a>
   {% endif %}
 
   {# Delete user button #}
   {% if request.user == some_user or request.user.profile.is_admin %}
-    <a href="{% url 'user_delete' user.id %}" class="button">Delete</a>
+    <a href="{% url 'user_delete' some_user.id %}" class="button">Delete</a>
   {% endif %}
 </div>
 
