--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -1111,7 +1111,7 @@ $h1-font-size: rem-calc(26px);
 // $h3-font-size: rem-calc(27);
 // $h4-font-size: rem-calc(23);
 // $h5-font-size: rem-calc(18);
-// $h6-font-size: 1rem;
+$h6-font-size: 0.75rem;
 
 // These control how subheaders are styled.
 // $subheader-line-height: 1.4;
