--- a/global_change_lab/templates/comments/list.html
+++ b/global_change_lab/templates/comments/list.html
@@ -1,16 +1,76 @@
 {% load comments %}
-{% get_comment_list for trainingbit as comment_list %} 
-<dl id="comments"> 
-  {% for comment in comment_list %} 
-  <div style="margin-left:{{ comment.level }}00px; border-left:5px solid #ddd"> 
-    <dt id="c{{ comment.id }}" style="background-color: #ddd"> 
-    {{ comment.submit_date }}&nbsp;-&nbsp;<a href="{% url 'profile' comment.user.id %}">{{ comment.name }} 
-      {% if comment.url %}</a>{% endif %}{% if comment.allow_thread %}&nbsp;-&nbsp; 
-    <a href="{{ comment.get_reply_url }}">Reply</a>{% endif %} 
-    </dt> 
-    <dd> 
-      <p>{{ comment.comment }}</p> 
-    </dd> 
-  </div> 
-  {% endfor %} 
-</dl> 
+
+<div class="comment-list">
+{% for comment in comment_list %}
+  <div style="margin-left:{{ comment.level }}rem;" id="comment-{{comment.id}}">
+    <div class="headline">
+      <h6>{{ comment.name }}</h6><span class="date">{{ comment.submit_date }}</span>
+      {% if comment.is_removed %}<span class="icon block">{% endif %}
+
+      <div class="buttons">
+        {# Delete comment button #}
+        {% if comment.user == request.user or request.user.profile.is_admin %}
+        <a href="{% url 'comments-delete' comment.id %}" class="button alert delete" data-dropdown="comment-delete-dropdown-{{comment.id}}">Delete</a>
+        <div id="comment-delete-dropdown-{{comment.id}}" class="f-dropdown" data-dropdown-content>
+          <h6>Really remove this comment?</h6>
+          <form id="comment-delete-from-{{comment.id}}" action="{% url 'comments-delete' comment.id %}" method="post">{% csrf_token %}
+            {% if next %}<div><input type="hidden" name="next" value="{{ next }}" id="next" /></div>{% endif %}
+            <p class="submit">
+              <input type="submit" name="submit" class="button" value="Remove" />
+              <a href="{{ comment.get_absolute_url }}" class="button close info">cancel</a>
+            </p>
+          </form>
+        </div>
+        <script>
+        $('#comment-delete-dropdown-{{comment.id}} a.close').click(function(event) {
+          event.preventDefault();
+          $('#comment-delete-dropdown-{{comment.id}}').foundation('dropdown', 'close', $('#comment-delete-dropdown-{{comment.id}}'));
+        });
+        $("#comment-delete-from-{{comment.id}}").ajaxForm({
+          success: function() {
+            $("#comment-{{comment.id}}").remove();
+          }
+        });
+        </script>
+        {% endif %}
+
+        {# Flag comment button #}
+        <a href="{% url 'comments-flag' comment.id %}" class="button flag" data-dropdown="comment-flag-dropdown-{{comment.id}}">Flag comment</a>
+        <div id="comment-flag-dropdown-{{comment.id}}" class="f-dropdown" data-dropdown-content>
+          <h6>Really flag this comment?</h6>
+          <form action="{% url 'comments-flag' comment.id %}" method="post">{% csrf_token %}
+            {% if next %}<div><input type="hidden" name="next" value="{{ next }}" id="next" /></div>{% endif %}
+            <p class="submit">
+              <input type="submit" name="submit" class="button" value="Flag" />
+              <a href="{{ comment.get_absolute_url }}" class="button close info">cancel</a>
+            </p>
+          </form>
+        </div>
+        <script>
+        $('#comment-flag-dropdown-{{comment.id}} a.close').click(function(event) {
+          event.preventDefault();
+          $('#comment-flag-dropdown-{{comment.id}}').foundation('dropdown', 'close', $('#comment-flag-dropdown-{{comment.id}}'));
+        });
+        $("#comment-flag-from-{{comment.id}}").ajaxForm({
+          success: function() {
+            $("#comment-{{comment.id}}").remove();
+          }
+        });
+        </script>
+
+
+
+
+
+        {# Reply to comment button #}
+        {% if comment.allow_thread %}<a href="{{ comment.get_reply_url }}" class="button">Reply</a>{% endif %}
+      </div>
+    </div>
+
+    <p>{{ comment.comment }}</p>
+
+    <a href="{% url 'profile' comment.user.id %}" class="reply">{{ comment.user.name }}</a>
+
+  </div>
+{% endfor %}
+</div>
