[Foundation] Make button rendering more sane

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -69,6 +69,7 @@ $gcl-blue: #4B81BF;
 // $success-color: #43AC6A;
 // $warning-color: #f08a24;
 // $info-color: #a0d3e8;
+$info-color: $gcl-lightgray;
 
 // We use these to make sure border radius matches unless we want it different.
 // $global-radius: 3px;
