--- a/skills/templates/skills/trainingbit_view.html
+++ b/skills/templates/skills/trainingbit_view.html
@@ -8,10 +8,24 @@
 {% load comments %}
 
 {% block content %}
-  {% include 'skills/partials/trainingbit_cover.html' %}
+
+<div class="page-buttons">
+
+  {# Mark as recommended #}
+  {% if request.user.profile.is_admin %}
+    {% if trainingbit.recommended %}
+      <a href="{% url 'skills:trainingbit_recommend' trainingbit.id %}" class="button info">Remove recommendation</a>
+    {% else %}
+      <a href="{% url 'skills:trainingbit_recommend' trainingbit.id %}" class="button success">Mark as recommended</a>
+    {% endif %}
+  {% endif %}
+
+  {# Delete trainingbit button #}
   {% if trainingbit.author == user %}
     <a href="{% url 'skills:trainingbit_delete' trainingbit.id %}" class="button">Delete training bit</a>
   {% endif %}
+</div>
+{% include 'skills/partials/trainingbit_cover.html' %}
 
 <hr>
 
